[gd_scene load_steps=3 format=3 uid="uid://dmvklct5ybqg7"]

[ext_resource type="FontFile" uid="uid://db4p37abih74f" path="res://assets/fonts/Sigmar/Sigmar-Regular.ttf" id="1_2n37o"]
[ext_resource type="Script" uid="uid://f4hovebph03t" path="res://menus/settings.gd" id="1_x4gdg"]

[node name="Node" type="CanvasLayer"]
script = ExtResource("1_x4gdg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 647.0
color = Color(0, 0, 0, 0.247059)

[node name="Label" type="Label" parent="."]
offset_left = 395.0
offset_top = 81.0
offset_right = 735.0
offset_bottom = 180.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 60
text = "Paused"
horizontal_alignment = 1

[node name="Audio" type="Label" parent="."]
offset_left = 489.0
offset_top = 173.0
offset_right = 635.0
offset_bottom = 239.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 40
text = "Audio"

[node name="Game" type="Label" parent="."]
offset_left = 489.0
offset_top = 382.0
offset_right = 635.0
offset_bottom = 448.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 40
text = "Game"

[node name="Master" type="Label" parent="."]
offset_left = 399.0
offset_top = 224.0
offset_right = 545.0
offset_bottom = 290.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 40
text = "Master"

[node name="MasterVolume" type="HScrollBar" parent="Master"]
layout_mode = 0
offset_left = 162.0
offset_top = 21.0
offset_right = 315.0
offset_bottom = 50.0
max_value = 1.0

[node name="Music" type="Label" parent="."]
offset_left = 416.0
offset_top = 270.0
offset_right = 538.0
offset_bottom = 336.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 40
text = "Music"

[node name="MusicVolume" type="HScrollBar" parent="Music"]
layout_mode = 0
offset_left = 145.0
offset_top = 19.0
offset_right = 298.0
offset_bottom = 48.0
max_value = 1.0

[node name="SFX" type="Label" parent="."]
offset_left = 453.0
offset_top = 312.0
offset_right = 532.0
offset_bottom = 378.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 40
text = "SFX"

[node name="SFXVolume" type="HScrollBar" parent="SFX"]
layout_mode = 0
offset_left = 109.0
offset_top = 22.0
offset_right = 262.0
offset_bottom = 50.0
max_value = 1.0

[node name="MouseSensitivityLabel" type="Label" parent="."]
offset_left = 181.0
offset_top = 430.0
offset_right = 552.0
offset_bottom = 496.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 40
text = "Mouse Sensitivity"

[node name="MouseSensitivity" type="HScrollBar" parent="MouseSensitivityLabel"]
layout_mode = 0
offset_left = 386.0
offset_top = 24.0
offset_right = 539.0
offset_bottom = 50.0
min_value = 0.001
max_value = 0.01
value = 0.01

[node name="HeadBobLabel" type="Label" parent="."]
offset_left = 183.0
offset_top = 481.0
offset_right = 554.0
offset_bottom = 547.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_2n37o")
theme_override_font_sizes/font_size = 40
text = "Head Bob"
horizontal_alignment = 2

[node name="HeadBob" type="HScrollBar" parent="HeadBobLabel"]
layout_mode = 0
offset_left = 385.0
offset_top = 22.0
offset_right = 538.0
offset_bottom = 48.0
min_value = 0.001
max_value = 150.0
value = 1.0

[connection signal="value_changed" from="Master/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="Music/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="SFX/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="MouseSensitivityLabel/MouseSensitivity" to="." method="_on_mouse_sensitivity_value_changed"]
[connection signal="value_changed" from="HeadBobLabel/HeadBob" to="." method="_on_head_bob_value_changed"]
