[gd_scene load_steps=3 format=3 uid="uid://b8wy67y5716wn"]

[ext_resource type="Script" uid="uid://f4hovebph03t" path="res://menus/settings.gd" id="1_kot5a"]
[ext_resource type="FontFile" uid="uid://db4p37abih74f" path="res://assets/fonts/Sigmar/Sigmar-Regular.ttf" id="2_0uirt"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_kot5a")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 644.0
color = Color(3.57972e-07, 0.26907, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 408.0
offset_top = 28.0
offset_right = 724.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("2_0uirt")
theme_override_font_sizes/font_size = 75
text = "Settings"

[node name="Return" type="Button" parent="."]
offset_left = 458.0
offset_top = 521.0
offset_right = 667.0
offset_bottom = 617.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0uirt")
theme_override_font_sizes/font_size = 30
text = "Return"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
